<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:layout_gravity="center"

    >

    <ImageView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="230dp"
    android:src="@drawable/logo"
        android:layout_gravity="center"
        android:contentDescription="@string/todo" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/allo_mon_docteur"
        android:gravity="center"
        android:textStyle=""
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:textSize="30sp"

      />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vous_sentez_malade_vous_cherchez_un_m_decin_pour_une_consultation_en_ligne_ou_domicile_ici_vous_trouverez_ce_que_vous_cherchez"
        android:lines="5"
        android:minLines="5"
        android:singleLine="false"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="9dp"
        android:paddingStart="30dp"
        android:paddingEnd="40dp"
        android:layout_marginHorizontal="20dp"
        android:textAlignment="center"
        android:maxLines="5"
        android:gravity="center"
        style="@style/TextAppearance.Material3.TitleSmall"
        />

    <Button
        android:id="@+id/alloMonDocteur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:padding="15dp"
        android:text="ALLO MON DOCTEUR"
        android:backgroundTint="@color/teal_700"

        />


</LinearLayout>